<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <ImageView
        android:id="@+id/image"
        android:src="@drawable/java"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/anh"
        android:padding="10dp" />

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="#ff00"
        android:layout_toEndOf="@id/image"
        android:id="@+id/ngonNgu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java"
        android:textSize="24sp"/>
    <TextView
        android:textColor="#4B8BBD"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/image"
        android:layout_below="@id/ngonNgu"
        android:id="@+id/moTa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_description"/>


</RelativeLayout>